First commit in a long time. Much needed refactoring.